fix: Ensure dashboard is hidden on initial load in Goals tab

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 </head>
 
-<body>
+<body data-view="active">
     <div class="app-container">
         <!-- Background Elements -->
         <div class="bg-glow"></div>
