--- a/projects/goal-horizon-2026/index.html
+++ b/projects/goal-horizon-2026/index.html
@@ -284,7 +284,7 @@
         });
     </script>
     <script type="module">
-        import './script.js';
+        import './app-v2.js';
         window.goalsRendered = true;
     </script>
 </body>
